objects/ssot__SocialMessage__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ChannelEngagementId__c</fullName>
        <label>Channel Engagement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Social Message Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ImageUrl__c</fullName>
        <label>Social Message Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MessageTextTagsList__c</fullName>
        <label>Social Message Content Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MessageText__c</fullName>
        <label>Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SocialMessageCategory__c</fullName>
        <label>Social Message Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SocialMessageCreatedDate__c</fullName>
        <label>Social Message Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StoryTextTagsList__c</fullName>
        <label>Social Message Story Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StoryText__c</fullName>
        <label>Social Message Story</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819730910_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SocialMessage_ChannelEngagementId_ma_rel</label>
        <referenceTo>ssot__ChannelEngagement__dlm</referenceTo>
        <relationshipLabel>SocialMessage_ChannelEngagementId_ma_rel</relationshipLabel>
        <relationshipName>rel_1719819730910_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>